[LongNB] them thuoc tinh linkToAPI va thumbnailImage cho class AbstractDocument, sua cac ham lien quan